--- a/css/glb.css
+++ b/css/glb.css
@@ -34,6 +34,12 @@ a:hover {
 	background:#fbae17;
 	height:5em;
 	overflow-y:visible;
+	position:fixed;
+	width:100%;
+	box-shadow:0 5px 5px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow:0 5px 5px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow:0 5px 5px rgba(0, 0, 0, 0.2);
+	-o-box-shadow:0 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 #logo{
@@ -909,10 +915,6 @@ input[type="text"]#start_position{
 	line-height:2.5em;
 }
 
-#about, #projects, #donate, #contact, #get_involved{
-	  font-family: Proxima-Nova-n3,Proxima-Nova-1,Proxima-Nova-2,"Proxima Nova",sans-serif;
-}
-
 #get_involved{
 	background:#F96;
 	padding:5em 0;
@@ -987,129 +989,6 @@ input[type="button"].apply_submit_but:hover{
 	color:#000;
 }
 
-#about{
-	background:#09F;
-	color:#FFF;
-	padding:5em 0;
-}
-
-#about div#intro{
-	float:left;
-	width:50%;
-}
-
-#about div#mission{
-	overflow:hidden;
-	padding-left:5em;
-}
-
-#projects{
-	padding:5em 0;
-}
-
-#projects_title{
-	text-align:center;
-}
-
-#projects_body{
-	margin-top:5em;
-	position:relative;
-}
-
-.project_item{
-	width:30%;
-	cursor:pointer;
-	border-radius:5px;
-	-webkit-border-radius:5px;
-	-moz-border-radius:5px;
-	-o-border-radius:5px;
-	/*box-shadow:0 0 10px #000;
-	-moz-box-shadow:0 0 10px #000;
-	-webkit-box-shadow:0 0 10px #000;
-	-o-box-shadow:0 0 10px #000;*/
-}
-
-.project_item_overlay{
-	position:absolute;
-	width:100%;
-	height:100%;
-	top:0;
-	border-radius:5px;
-	-webkit-border-radius:5px;
-	-moz-border-radius:5px;
-	-o-border-radius:5px;
-	background:rgba(0, 0, 0, 0.3);
-	visibility:hidden;
-}
-
-.project_item:hover div.project_item_overlay{
-	visibility:visible;
-}
-
-.project_item:nth-child(1){
-	position:absolute;
-	left:0;
-	top:0;
-}
-
-.project_item:nth-child(1) div.project_item_body{
-	background:#FCB910;
-}
-
-.project_item:nth-child(2){
-	margin:auto;
-	position:relative;/*to contain the overlay div*/
-}
-
-.project_item:nth-child(2) div.project_item_body{
-	background:#0FA4F2;
-}
-
-
-.project_item:nth-child(3){
-	position:absolute;
-	right:0;
-	top:0;
-}
-
-.project_item:nth-child(3) div.project_item_body{
-	background:#FE5F5E;
-}
-
-
-.project_item_cover img{
-	display:block;
-	width:100%;
-	height:auto;
-	border-radius:5px 5px 0 0;
-	-webkit-border-radius:5px 5px 0 0;
-	-moz-border-radius:5px 5px 0 0;
-	-o-border-radius:5px 5px 0 0;
-}
-
-.project_item_body{
-	border-radius:0 0 5px 5px;
-	-webkit-border-radius:0 0 5px 5px;
-	-moz-border-radius:0 0 5px 5px;
-	-o-border-radius:0 0 5px 5px;
-}
-
-.project_item_body_title{
-	padding:10px;
-	font-size:150%;
-	color:#FFF;
-	text-align:center;
-}
-
-.project_item_body_text{
-	text-align:center;
-	padding:10px;
-	border-radius:0 0 5px 5px;
-	-webkit-border-radius:0 0 5px 5px;
-	-moz-border-radius:0 0 5px 5px;
-	-o-border-radius:0 0 5px 5px;
-}
-
 #donate{
 	/*background:#179B49;*/
 	background:#FCB910;
@@ -1150,10 +1029,6 @@ input[type="button"].apply_submit_but:hover{
 
 #contact div.wrapper{
 	border-bottom:1px solid #A1A1A1;
-}
-
-#about div.wrapper, #projects div.wrapper, #donate div.wrapper, #contact div.wrapper, #get_involved div.wrapper{
-	padding:10px 0;
 }
 
 #application_title, #details_title{
@@ -1372,4 +1247,104 @@ table#fees_table td{
 
 table#fees_table td:first-child{
 	text-align:left;
+}
+
+#main_content{
+	background:#EAEAEA;
+}
+
+#projects{
+
+}
+
+#projects_header{
+	padding:1em 0px;
+	text-align:center;
+	font-size:200%;
+	color:#555;
+}
+
+#projects_main{
+	position:relative;
+	text-align:center;
+}
+
+a.project_item{
+	display:inline-block;
+	text-decoration:none;
+	color:#FFF;
+	width:28%;
+	margin:0px 1.25rem 2.5rem;
+	background:#FBAE17;
+}
+
+a#environmentalist{
+	background:#778410;
+}
+
+a#shy_boy{
+	background:#C3233D;
+}
+
+a#smart_boy{
+	background:#9A7C7E;
+}
+
+a#bright_boys{
+	background:#0085F1;
+}
+
+a#cute_girl{
+	background:#FE982C;
+}
+
+a#laugh_star{
+	background:#A26294;
+}
+
+a.project_item h4{
+	letter-spacing:1px;
+	margin:10px 0;
+	font-weight:500;
+}
+
+a.project_item p{
+	margin:10px 0;
+	font-weight:200;
+	font-size:80%;
+	letter-spacing:1px;
+	padding:0 10px;
+	transform:translateX(0px);/*helps make font more visible*/
+}
+
+.project_item_header img{
+	display:block;
+	width:100%;
+	height:auto;
+}
+
+#about{
+	background:#F5F5F5;
+}
+
+#about_thumb{
+	float:left;
+	width:50%;
+}
+
+#about_thumb img{
+	display:block;
+	width:100%;
+}
+
+#about_text{
+	padding:3em 5em;
+	overflow:hidden;
+}
+
+#about_text_header{
+	font-size:300%;
+	font-weight:200;
+	color:#555;
+	margin-bottom:1em;
 }
