--- a/css/glb.css
+++ b/css/glb.css
@@ -35,6 +35,7 @@ a:hover {
 	overflow-y:visible;
 	position:fixed;
 	width:100%;
+	z-index:1;
 	/* to be called when the user scrolls down and removed when they're back to top
 	background:#FBAE17;
 	box-shadow:0 5px 5px rgba(0, 0, 0, 0.2);
