--- a/css/glb.css
+++ b/css/glb.css
@@ -150,7 +150,7 @@ svg#logo:hover #letter{
 }
 
 #mobile_menu:hover div#mobile_menu_icon .mobile_menu_icon_stripe{
-	background:#000;
+	background:#FBAE17;
 }
 
 #mobile_menu ul{
