--- a/css/glb.css
+++ b/css/glb.css
@@ -100,57 +100,34 @@ svg#logo:hover #letter{
 	border-bottom:3px solid #FFF;
 }
 
-#mobile_menu_icon{
-	padding:5px;
-	display:inline-block;
-    vertical-align:middle;
+svg#mobile_menu_icon{
+	cursor:pointer;
+	height:5em;
+	width:2em;
+	padding:0 1em;
 }
 
-.mobile_menu_icon_stripe{
-	padding:2px 10px;
-	background:#FFF;
-}
-
-.mobile_menu_icon_stripe:nth-child(2){
-	margin:4px 0;
+svg#mobile_menu_icon:hover{
+	fill:#FBAE17;
 }
 
 #mobile_menu{
 	position:relative;
 	float:right;
 	height:5em;
-	padding:0 1em;
 	display:none;
-}
-
-#mobile_menu:before{    /* create a full-height inline block pseudo=element */
-    content:' ';
-    display:inline-block;
-    vertical-align:middle;  /* vertical alignment of the inline element */
-    height:100%;
+	padding-right:10px;
 }
 
 #mobile_menu_container{
-	position:absolute;
-	background:#FFF;
-	visibility:hidden;
-	z-index:20;
-	top:5em;
-	right:-12em;
-	width:10em;
-	transition:all 1s ease 0.1s;
-	-moz-transition:all 1s ease 0.1s;
-	-webkit-transition:all 1s ease 0.1s;
-	-o-transition:all 1s ease 0.1s;
-}
-
-#mobile_menu:hover div#mobile_menu_container{
-	visibility:visible;
-	right:0;
-}
-
-#mobile_menu:hover div#mobile_menu_icon .mobile_menu_icon_stripe{
-	background:#FBAE17;
+	position:fixed;
+	display:none;
+	background:rgba(255, 255, 255, 0.98);
+	z-index:2;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
 }
 
 #mobile_menu ul{
@@ -165,6 +142,7 @@ svg#logo:hover #letter{
 	font-size:80%;
 	color:#000;
 	line-height:2em;
+	text-align:center;
 	text-decoration:none;
 }
 
@@ -1140,25 +1118,6 @@ a.apply_form_timeline_step, a.details_links_cat{
 	margin-bottom:1em;
 }
 
-.back_or_cancel_but_cont{
-	text-align:center;
-	margin-bottom:10px;
-}
-
-a.cancel_but{
-	text-decoration:none;
-	display:inline-block;
-	color:#000;
-	font-size:80%;
-	border:1px dashed #000;
-	padding:5px;
-}
-
-a.cancel_but:hover{
-	color:#F00;
-	border:1px dashed #F00;
-}
-
 .form_inputs_subsection{
 	margin-bottom:10px;
 }
@@ -1366,4 +1325,31 @@ video#hero_video{
 
 #involve{
 	background:#EFEFEF;
+}
+
+div#menu_drawer_cancel{
+	position:absolute;
+	width:3em;
+	height:3em;
+	line-height:3em;
+	z-index:3;
+	text-align:center;
+	top:10px;
+	right:10px;
+	cursor:pointer;
+	background:rgb(118, 105, 104);
+	background:rgba(118, 105, 104, 0.9);
+	box-shadow:0 2px 2px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow:0 2px 2px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow:0 2px 2px rgba(0, 0, 0, 0.2);
+	-o-box-shadow:0 2px 2px rgba(0, 0, 0, 0.2);
+	border-radius:100%;
+	-moz-border-radius:100%;
+	-webkit-border-radius:100%;
+	-o-border-radius:100%;
+}
+
+svg#cancel{
+	fill:#FFF;
+	vertical-align:middle;
 }
