--- a/css/glb.css
+++ b/css/glb.css
@@ -1353,3 +1353,47 @@ svg#cancel{
 	fill:#FFF;
 	vertical-align:middle;
 }
+
+#staff{
+	background:#EAEAEA;
+}
+
+#staff_main{
+	padding-bottom:0.1em;
+}
+
+.section_banner_bg{
+	padding:2.5em 0;
+	background:#FFF;
+}
+
+#staff_header{
+	padding:1em 0px;
+	text-align:center;
+	margin-bottom:0;
+}
+
+.staff_item{
+	margin-bottom:2.5em;
+	background:#F5F5F5;
+}
+
+.staff_item_thumb{
+	float:left;
+}
+
+.staff_item_thumb img{
+	width:100%;
+	height:auto;
+	display:block;
+}
+
+.staff_item_text{
+	overflow:hidden;
+	padding:3em 5em;
+}
+
+.staff_item_text_header{
+	font-size:250%;
+	font-weight:200;
+}
