--- a/css/glb.css
+++ b/css/glb.css
@@ -1365,10 +1365,13 @@ svg#cancel{
 .section_banner_bg{
 	padding:2.5em 0;
 	background:#FFF;
+	position:fixed;
+	width:100%;
+	z-index:0;
 }
 
 #staff_header{
-	padding:1em 0px;
+	padding:2.7em 0 1em 0;
 	text-align:center;
 	margin-bottom:0;
 }
