--- a/css/glb.css
+++ b/css/glb.css
@@ -1,5 +1,5 @@
 body {
-	font-family:Helvetica Neue, Verdana, Geneva, sans-serif;
+	font-family:"proxima-nova", Helvetica Neue, Verdana, Geneva, sans-serif;
 	/*'adobe-clean','HelveticaNeue-Light',Helvetica,Arial,sans-serif*/
 	margin:0;
 	color:#000;
